--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,35 @@
-/*.container{
-    background-color: #000000;
-    
+:root{
+    --primary:#000000;
+    --secoundary: #222222;
 }
-.row{
-    background-color:  #222222;
+.container{
+    background: var(--primary);
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: auto 25% 70%;
 }
-.icon-holder .icon-1{
-    color:white;
+
+
+body,p,ul,li{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
 }
-.icon-holder .icon-2{
-    color: white;
+body{
+    background: var(--primary);
+    overflow-x: hidden;
+    font-family: Arial, Helvetica, sans-serif;
 }
-.icon-holder .icon-3{
-    color: white;
+
+li{
+    list-style-type: none;
 }
+
 
 h1,h2,h4{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bolder;
+    font-weight: bold;
 }
 p{
     color: grey; 
@@ -26,41 +37,30 @@ p{
 .paragraph{
     color: rgb(136, 213, 136);
 }
-.services .icon{
-    color: white;
-}
-
-*/
 
 /*mobile screen size */
-/*
+
 @media screen and (min-width: 320px) {
     .container{
-        background-color: #000000;
-        margin: 10px 0px;
-        padding: 50px 2000px;
-        height: 1600px;
+        background-color: var(--primary);
+        height: fit-content;
+        width: 100%;
     }
-    .row{
-        background-color:  #222222;
-        height: 1500px;
-        display: grid;
-       
-    }
-    .icon-holder{  
+   
+    .col-sm-3{  
         display: flex;
         justify-content: space-between;
     
     }
-    .icon-holder .icon-1{
+    .col-sm-3 .icon-1{
         color:white;
     }
-    .icon-holder .icon-2{
+    .col-sm-3 .icon-2{
         display: flex;
         justify-content: center;
         color: white;
     }
-    .icon-holder .icon-3{
+    .col-sm-3 .icon-3{
         color: white;
         display: flex;
         justify-content: flex-end;
@@ -81,7 +81,7 @@ p{
         padding: 5px 5px;
     }
 
-    .image-holder{
+    .col-md-7{
         position: relative;
         font-family: Arial, Helvetica, sans-serif;
     }
@@ -105,7 +105,7 @@ p{
     img{
         border-radius: 5px;
         max-width: 100%;
-        display: grid;
+        display: flex;
         
     }
    
@@ -139,7 +139,7 @@ p{
         padding: 10px;
     }
     .services h4{
-        text-align: center;
+        text-align: left;
     }
     .services .icon{
         color: white;
@@ -148,24 +148,266 @@ p{
 
     
 }
-*/
+
 /*ipad screen size */
+
 @media screen and (min-width: 800px) {
     .container{
        background-color: black; 
        display: grid;
        justify-content: space-between;
+       grid-template-columns: 10% 25% 70%;
+       margin: 20px 20px;
+       padding: 50px 50px ;
+       gap: 80px;
     }
-    .image-holder{
-        max-width: 10px;
+    .row1{
+        background-color: #222222;
+        display: grid;
+        justify-content: space-between;
     }
-    .icon-holder{
+
+    .row2{
+        background-color: #222222;
+        display: grid;
+        justify-content: space-between;
+    }
+
+    .row3 {
+        background-color: #222222;
+        display: grid;
+        justify-content: space-between;
+    }
+
+    .icon-1{
+       border-color: green;
+       border-radius: 0px;
+       box-sizing: border-box;
+       display: grid;   
+    }
+
+    .icon-2{
+        display: grid;
+        justify-content: space-between;
+    }
+    .icon-3{
+        display: grid;
+        justify-content: space-between;
+    }
+    .col-sm-3{
         color: white;
+        display: grid;
+        justify-content: space-between;
+        margin: 20px;
+        padding-bottom: 10px;
     }
+    .col-sm-3 .icon1{
+        margin: 5px 5px;
+        padding: 20px 20px;
+        flex-direction: column;
+    }
+    .col-sm-3 .icon2{
+        
+        margin: 5px 5px;
+        padding: 20px 20px;
+    }
+    .col-sm-3 .icon3{
+        margin: 5px 5px;
+        padding: 20px 20px;
+    }
+    .col-md-7{
+        color: white;
+        max-width: 10px;
+        display: grid;
+        justify-content: space-between;
+    }
+    .col-xl-12 {
+        color: white;
+        width: 100%;
+        display: grid;
+        justify-content: space-between;
+    }
+    
+     
+    .grid{
+        display: grid;
+        grid-template-columns: repeat(8, 1fr);
+        gap: 80px;
+    }
+    .services{
+        padding: 30px 20px;
+        text-align: left;
+        background: #202020;
+      }
+    .services h2{
+        text-align: rigth;
+      }
+    .services ul{
+        margin: 40px 0;
+      }
+    .services li{
+        padding: 0px;
+        background: #222222;
+        grid-column: span 4;
+        text-align: left;
+      }
+    .services img{
+        height: 60px;
+        margin: 10px auto;
+      }
+    img{
+        border-radius: 5px;
+        max-width: 170%;
+        display: grid;
+        justify-content: space-between;
+        position: relative;
+    }
+    .col-md-7 {
+        position: absolute;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    
+    .about-me{
+        margin: 25px 35px;
+        padding-left: 20px ;
+    }
+    #serv{
+        margin: 15px 14px;
+        padding-left: 20px ;
+    }
+    li{
+        list-style-type: none;
+    }
+}  
 
 
-}
 /*laptop screen size */
 @media screen and (min-width: 1200px) {
-    
+    .container{
+        background-color: black; 
+        display: grid;
+        justify-content: space-between;
+        grid-template-columns: 5% 30% 50%;
+        margin: 10px 10px 10px 10px;
+        padding: 50px 50px 50px 50px;
+        gap: 10px;
+     }
+     .row1{
+         background-color: #222222;
+         display: grid;
+         justify-content: space-between;
+        
+     }
+     .row2{
+         background-color: #222222;
+         display: grid;
+         justify-content: space-between;
+        
+     }
+ 
+     .row3 {
+         background-color: #222222;
+         display: grid;
+         justify-content: space-between;
+         display: grid;
+         justify-content: space-between;
+        
+     }
+     .icon-1{
+        border-color: green;
+        border-radius: 20px;
+        box-sizing: border-box;
+        display: flex;
+         
+     }
+     .icon-2{
+         display: grid;
+     }
+     .icon-3{
+         display: flex;
+     }
+     .col-sm-3{
+         color: white;
+         display: grid;
+         justify-content: space-between;
+         margin: 20px;
+         padding-bottom: 10px;
+     }
+     .col-sm-3 .icon1{
+         margin: 5px 5px;
+         padding: 20px 20px;
+         flex-direction: column;
+     }
+     .col-sm-3 .icon2{
+         
+         margin: 5px 5px;
+         padding: 20px 20px;
+     }
+     .col-sm-3 .icon3{
+         margin: 5px 5px;
+         padding: 20px 20px;
+     }
+     .col-md-7{
+         color: white;
+         max-width: 10px;
+         display: grid;
+         justify-content: space-between;
+     }
+     .col-xl-12 {
+         color: white;
+         width: 100%;
+         display: grid;
+         justify-content: space-between;
+     }
+     
+      
+     .grid{
+         display: grid;
+         grid-template-columns: repeat(8, 1fr);
+         gap: 80px;
+     }
+     .services{
+         padding: 30px 20px;
+         text-align: left;
+         background: #202020;
+       }
+     .services h2{
+         text-align: rigth;
+       }
+     .services ul{
+         margin: 40px 0;
+       }
+     .services li{
+         padding: 0px;
+         background: #222222;
+         grid-column: span 4;
+         text-align: left;
+       }
+     .services img{
+         height: 60px;
+         margin: 10px auto;
+       }
+     img{
+         border-radius: 5px;
+         max-width: 170%;
+         display: grid;
+         justify-content: space-between;
+         position: relative;
+     }
+     .col-md-7 {
+         position: absolute;
+         font-family: Arial, Helvetica, sans-serif;
+     }
+     
+     .about-me{
+         margin: 25px 35px;
+         padding-left: 20px ;
+     }
+     #serv{
+         margin: 15px 14px;
+         padding-left: 20px ;
+     }
+     li{
+         list-style-type: none;
+     }
 }
